# autotierx

./: CMakeLists.txt  main.cpp  package-lock.json
config/: policies.json
dashboard/: package-lock.json  package.json
dashboard/src/: App.css  App.jsx
include/api/: ApiServer.hpp  WebsocketBroadcaster.hpp
include/classification/: ClassificationEngine.hpp
include/classifier/: TieringPolicy.hpp
include/core/: AccessManager.hpp  AuditEvent.hpp  AuditLogger.hpp  BackgroundTieringDaemon.hpp  ObjectManager.hpp  PolicyManager.hpp
include/db/: DatabaseManager.hpp  ObjectMetadata.hpp
include/migration/: AutoTieringEngine.hpp  BackgroundTieringDaemon.hpp  MigrationEngine.hpp
include/monitoring/: MonitoringEngine.hpp
include/storage/: StorageManager.hpp  StorageTier.hpp
include/utils/: Logger.hpp  TierUtils.hpp
metadata/: metadata.db
src/api/: ApiServer.cpp  ApiServer.cpp.backup
src/classification/: ClassificationEngine.cpp
src/classifier/: TieringPolicy.cpp
src/core/: AccessManager.cpp  AuditLogger.cpp  BackgroundTieringDaemon.cpp  ObjectManager.cpp  PolicyManager.cpp
src/db/: DatabaseManager.cpp  ObjectMetadata.cpp
src/migration/: AutoTieringEngine.cpp  BackgroundTieringDaemon.cpp  MigrationEngine.cpp
src/monitoring/: MonitoringEngine.cpp
src/storage/: StorageManager.cpp  StorageTier.cpp
src/utils/: Logger.cpp  TierUtils.cpp
uploads/: atest-file.txt  sample.txt
